--- a/client/webserver/site/src/css/icons.scss
+++ b/client/webserver/site/src/css/icons.scss
@@ -1,5 +1,15 @@
 /* icons */
 
+@font-face {
+  font-family: "icomoon";
+  src:
+    url("/font/icomoon.ttf?u8i98qq") format("truetype"),
+    url("/font/icomoon.woff?u8i98qq") format("woff"),
+    url("/font/icomoon.svg?u8i98qq#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 [class^="ico-"],
 [class*=" ico-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
@@ -14,6 +24,16 @@
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.micro-icon {
+  width: 15px;
+  height: 15px;
+}
+
+.mini-icon {
+  width: 20px;
+  height: 20px;
 }
 
 .ico-spinner::before {
@@ -35,7 +55,7 @@
 .ico-check::before {
   content: "\ea10";
   display: inline-block;
-  color: $buycolor_light;
+  color: var(--buy-color);
 }
 
 .ico-bell::before {
